--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "react-use-websocket": "^4.2.0",
     "recharts": "^2.1.14",
     "web-vitals": "^2.1.4"
   },
